fix: Add left text-align in mobile for recruitment page
Add left text-align in mobile for recruitment page

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,5 +1,9 @@
 .hero {
     text-align: center;
+
+    &.left {
+        text-align: left;
+    }
 }
 
 .hero-inner {
